--- a/ng-playground/comps/src/app/elements/elements-home/elements-home.component.html
+++ b/ng-playground/comps/src/app/elements/elements-home/elements-home.component.html
@@ -1,1 +1,12 @@
-<p>elements-home works!</p>
+<app-divider>Segment</app-divider>
+<app-segment>
+  <header>
+    <i class="pdf file outline icon"></i>
+    <h3>No documents are listed for this customer</h3>
+  </header>
+
+  <button class="ui primary button">Add Document</button>
+</app-segment>
+
+<app-divider>Placeholder</app-divider>
+<app-placeholder [line]="5"></app-placeholder>
