--- a/ng-playground/comps/src/app/collections/collections-home/collections-home.component.html
+++ b/ng-playground/comps/src/app/collections/collections-home/collections-home.component.html
@@ -1,1 +1,9 @@
-<p>collections-home works!</p>
+<app-divider>Table</app-divider>
+<app-table [records]="data" [headers]="headers"></app-table>
+
+<app-divider>Tabs</app-divider>
+<app-tabs>
+  <a class="item" routerLink="./" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Biography</a>
+  <a class="item" routerLink="companies" routerLinkActive="active">Companies</a>
+  <a class="item" routerLink="partner" routerLinkActive="active">Partner</a>
+</app-tabs>
